HTMLViewSourceDocument not affected by Feature-Policy

Feature-Policy does not quite make sense in a view-source document; such documents are not actually
rendering "the" WebPage. This CL makes sure feature policy takes the default values for a
view-source document.

TBR=iclelland@chromium.org

Bug: 898688
Change-Id: I4f8667f8539da977d0cf0281f4e8ee99fe9b23e9
Reviewed-on: https://chromium-review.googlesource.com/c/1305248
Commit-Queue: Ehsan Karamad <ekaramad@chromium.org>
Reviewed-by: Ehsan Karamad <ekaramad@chromium.org>
Reviewed-by: Avi Drissman <avi@chromium.org>
Reviewed-by: Kent Tamura <tkent@chromium.org>
Cr-Commit-Position: refs/heads/master@{#604256}
Former-commit-id: c1a2cadf8e169b2aba6fff00000e8776050d199b